testing react router

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,11 +12,17 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Scheherazade+New:wght@400;700&display=swap"
       rel="stylesheet">
     <style>
+      .link {
+        color: inherit;
+        text-decoration: none;
+      }
+    </style>
+    <style>
       * {
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Blog with React</title>
   </head>
 
   <body>
